{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 11,
  "lineage": "514a10ca-ac33-7bc5-f746-a644b984c05e",
  "resources": [
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-private-vnet_resourceGroup",
            "location": "westus",
            "name": "nsg-private-vnet_resourceGroup",
            "resource_group_name": "vnet_resourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "nsg-rule-outbound-vnet_resourceGroup-Deny-all",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg-rule-inbound-vnet_resourceGroup-deny-all",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.mstest"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public-nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-public-vnet_resourceGroup",
            "location": "westus",
            "name": "nsg-public-vnet_resourceGroup",
            "resource_group_name": "vnet_resourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "nsg-rule-outbound-vnet_resourceGroup-Deny-all",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg-rule-inbound-vnet_resourceGroup-allow-ssh",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg-rule-inbound-vnet_resourceGroup-allow-https",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg-rule-inbound-vnet_resourceGroup-http-http",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.mstest"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "privatesubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/virtualNetworks/virtual-vnet_resourceGroup/subnets/private_subnet",
            "name": "private_subnet",
            "resource_group_name": "vnet_resourceGroup",
            "virtual_network_name": "virtual-vnet_resourceGroup"
          },
          "depends_on": [
            "azurerm_resource_group.mstest",
            "azurerm_virtual_network.mstest"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "publicsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/virtualNetworks/virtual-vnet_resourceGroup/subnets/public_subnet",
            "name": "public_subnet",
            "resource_group_name": "vnet_resourceGroup",
            "virtual_network_name": "virtual-vnet_resourceGroup"
          },
          "depends_on": [
            "azurerm_resource_group.mstest",
            "azurerm_virtual_network.mstest"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-private-association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/virtualNetworks/virtual-vnet_resourceGroup/subnets/private_subnet",
            "network_security_group_id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-private-vnet_resourceGroup",
            "subnet_id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/virtualNetworks/virtual-vnet_resourceGroup/subnets/private_subnet"
          },
          "depends_on": [
            "azurerm_network_security_group.private-nsg",
            "azurerm_subnet.privatesubnet"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-public-association",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/virtualNetworks/virtual-vnet_resourceGroup/subnets/public_subnet",
            "network_security_group_id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-public-vnet_resourceGroup",
            "subnet_id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/virtualNetworks/virtual-vnet_resourceGroup/subnets/public_subnet"
          },
          "depends_on": [
            "azurerm_network_security_group.public-nsg",
            "azurerm_subnet.publicsubnet"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mstest",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/virtualNetworks/virtual-vnet_resourceGroup",
            "location": "westus",
            "name": "virtual-vnet_resourceGroup",
            "resource_group_name": "vnet_resourceGroup",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/virtualNetworks/virtual-vnet_resourceGroup/subnets/public_subnet",
                "name": "public_subnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/virtualNetworks/virtual-vnet_resourceGroup/subnets/private_subnet",
                "name": "private_subnet",
                "security_group": "/subscriptions/1ae88adf-6d09-4e25-96e5-725c8edba616/resourceGroups/vnet_resourceGroup/providers/Microsoft.Network/networkSecurityGroups/nsg-private-vnet_resourceGroup"
              }
            ]
          },
          "depends_on": [
            "azurerm_resource_group.mstest"
          ]
        }
      ]
    }
  ]
}